# Correlation-analysis-regression-of-non-spatial-variables

./: 123123123.md  README.md  build.py  build.spec  pyproject.toml  requirements.md  run_app.py  test_app.py  使用说明.txt  修改.md  后续升级计划.txt  用户使用手册.md  项目结构.txt
src/correlation_analyzer/: __init__.py  main.py
src/correlation_analyzer/core/: data_loader.py  failure_tracker.py  preprocessor.py  regression_analysis.py  results_aggregator.py  spearman_analysis.py
src/correlation_analyzer/models/: __init__.py  regression_models.py
src/correlation_analyzer/ui/: __init__.py  main_window.py
src/correlation_analyzer/utils/: excel_handler.py  validators.py
