[project]
name = "correlation-analyzer"
version = "0.1.0"
description = "Statistical analysis tool for correlation and regression analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.gui-scripts]
correlation-analyzer-gui = "correlation_analyzer.main:main"

[project.scripts]
correlation-analyzer = "correlation_analyzer.main:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
